package Iterator.CE1;

public abstract class Collection {
    abstract Iterator CreateIterator();
}
