package Iterator.CE1;

public abstract class Iterator {
    abstract Object First();
    abstract Object Next();
    abstract boolean isDone();
    abstract Object CurrentItem();
}
