@startuml
'https://plantuml.com/class-diagram

abstract class Collection{
    {abstract} Iterator createIterator()
}

interface Iterator{
    + First(): Object
    + Next(): Object
    + IsDone(): bool
    + CurrentItem(): Object
}

class ArrayCollection{
    - int[] arr
    + getItem(int i): int
    + count(): int
}


Collection <|-- ArrayCollection

Iterator <|.. ArrayIterator

ArrayIterator --> ArrayCollection : collection

@enduml